@@ -1,3 +1,8 @@
+2001-12-10 Stefan Petersen (spe@stacken.kth.se)
+
+	* src/gerbv.c : Forgot to check if we had any pixmap to draw.
+
+	
 2001-12-09 Stefan Petersen (spe@stacken.kth.se)
 
 	* src/gerber.c: Fixed small bug in min/max calculation
